<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_vertical|start"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_large"
        android:text="@string/main_message"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <TextView
        android:id="@+id/activity_main_buruberi_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_medium"
        android:text="@string/info_buruberi_version"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

    <TextView
        android:id="@+id/activity_main_common_sense_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_medium"
        android:text="@string/info_common_sense_version"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

    <TextView
        android:id="@+id/activity_main_app_version_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_medium"
        android:text="@string/info_app_version_name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

    <TextView
        android:id="@+id/activity_main_app_version_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_app_version_code"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

</LinearLayout>
